--- a/angular.json
+++ b/angular.json
@@ -55,7 +55,7 @@
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.scss",
-              "src/theme.scss",
+              "src/theme.scss"
             ],
             "scripts": []
           },
