Fix release pipeline #1

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Package release
         run: |
           mkdir ./public
-          cp ./dist/rBitTorrent/* ./public/
+          cp ./dist/rBitTorrent/* ./public/ -r
           zip -r release.zip ./public
       - name: Create release
         id: create_release
